unpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>LSIG_SX_PrimaryApplication__c</fullName>
        <label>Primary Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LSIG_SubVertical__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Agrochemical Development</fullName>
                </value>
                <value>
                    <fullName>Amino Acid Analysis</fullName>
                </value>
                <value>
                    <fullName>Amplified Fragment Length Polymorphism (AFLP)</fullName>
                </value>
                <value>
                    <fullName>Animal Sports Testing (Non-US Only)</fullName>
                </value>
                <value>
                    <fullName>Animal Sports Testing (US Only)</fullName>
                </value>
                <value>
                    <fullName>Biochemical Genetics Research</fullName>
                </value>
                <value>
                    <fullName>Biologics Characterization</fullName>
                </value>
                <value>
                    <fullName>Biologics Characterization - Gene Therapy</fullName>
                </value>
                <value>
                    <fullName>Biologics Characterization - mAb variants and other proteins</fullName>
                </value>
                <value>
                    <fullName>Biologics Characterization - Oligonucleotides and Nucleic Acids</fullName>
                </value>
                <value>
                    <fullName>Biologics Characterization - Polysaccharides</fullName>
                </value>
                <value>
                    <fullName>Biologics Characterization - Standard mAb</fullName>
                </value>
                <value>
                    <fullName>Biologics Characterization - Therapeutic Peptides</fullName>
                </value>
                <value>
                    <fullName>Biologics Characterization - Vaccines</fullName>
                </value>
                <value>
                    <fullName>Biomarker, Omics, and Target ID</fullName>
                </value>
                <value>
                    <fullName>Biomarker Quantitation</fullName>
                </value>
                <value>
                    <fullName>Biomarker Research</fullName>
                </value>
                <value>
                    <fullName>Biomarker Study</fullName>
                </value>
                <value>
                    <fullName>Both Small and Large Molecule - BioA</fullName>
                </value>
                <value>
                    <fullName>Cannabis Profiling</fullName>
                </value>
                <value>
                    <fullName>Cell Culture Media Analysis</fullName>
                </value>
                <value>
                    <fullName>Clinical Toxicology / Drugs of Abuse / Pain Management</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Companion Diagnostic Research</fullName>
                </value>
                <value>
                    <fullName>Compound Characterization</fullName>
                </value>
                <value>
                    <fullName>Crop Science</fullName>
                </value>
                <value>
                    <fullName>Discovery Lipidomics</fullName>
                </value>
                <value>
                    <fullName>Discovery Metabolomics</fullName>
                </value>
                <value>
                    <fullName>Discovery Proteomics</fullName>
                </value>
                <value>
                    <fullName>DNA Sequencing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_SeparationsType__c</fullName>
        <label>Separations Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LSIG_SystemSolution__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nano Flow</fullName>
                </value>
                <value>
                    <fullName>Micro Flow</fullName>
                </value>
                <value>
                    <fullName>Analytical Flow</fullName>
                </value>
                <value>
                    <fullName>CESI</fullName>
                </value>
                <value>
                    <fullName>PA-800 Plus</fullName>
                </value>
                <value>
                    <fullName>GeXP</fullName>
                </value>
                <value>
                    <fullName>MDQ</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>BioPhase 8800</fullName>
                </value>
                <value>
                    <fullName>Redshift AQS3Pro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_StratInitiative__c</fullName>
        <label>Strat Initiative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Biologic development</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>preclinical biology</fullName>
                    <label>Preclinical Biology</label>
                </value>
                <value>
                    <fullName>Industrials</fullName>
                </value>
                <value>
                    <fullName>unspecified</fullName>
                    <label>Unspecified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_SubVertical__c</fullName>
        <label>Sub Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LSIG_MarketVertical__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>BasicMeasurement</fullName>
                </value>
                <value>
                    <fullName>Bioanalysis/PK</fullName>
                </value>
                <value>
                    <fullName>Biopharma - Development</fullName>
                </value>
                <value>
                    <fullName>Biopharma - Discovery</fullName>
                </value>
                <value>
                    <fullName>Biopharma - Process Control</fullName>
                </value>
                <value>
                    <fullName>Biopharma - QA/QC</fullName>
                </value>
                <value>
                    <fullName>Cannabis</fullName>
                </value>
                <value>
                    <fullName>Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Dietary Supplements</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                </value>
                <value>
                    <fullName>Genomics</fullName>
                </value>
                <value>
                    <fullName>Homeland and Biosecurity</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>Lipidomics</fullName>
                </value>
                <value>
                    <fullName>Metabolomics</fullName>
                </value>
                <value>
                    <fullName>Multi-Omics</fullName>
                </value>
                <value>
                    <fullName>Pharma - Development</fullName>
                </value>
                <value>
                    <fullName>Pharma - Discovery</fullName>
                </value>
                <value>
                    <fullName>Pharma - QA/QC</fullName>
                </value>
                <value>
                    <fullName>Proteomics</fullName>
                </value>
                <value>
                    <fullName>Research (RUO)</fullName>
                </value>
                <value>
                    <fullName>Sports Testing</fullName>
                </value>
                <value>
                    <fullName>Sports Testing (US Only)</fullName>
                </value>
                <value>
                    <fullName>Toxicology</fullName>
                </value>
                <value>
                    <fullName>Natural Products</fullName>
                </value>
                <value>
                    <fullName>Water &amp; Soil</fullName>
                </value>
                <value>
                    <fullName>Workplace Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_SystemSolution__c</fullName>
        <label>System Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>Accessories only</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>IntaBio</fullName>
                </value>
                <value>
                    <fullName>Non Contract / After Market Opp</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Software Contracts</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>CESI MS</fullName>
                </value>
                <value>
                    <fullName>CE Only</fullName>
                </value>
                <value>
                    <fullName>LC System and MS System</fullName>
                </value>
                <value>
                    <fullName>LC System Only</fullName>
                </value>
                <value>
                    <fullName>MS System Only</fullName>
                </value>
                <value>
                    <fullName>CE Only - 6 list</fullName>
                    <isActive>false</isActive>
                    <label>CE Only - 6 list</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_Timing__c</fullName>
        <label>Timing%</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <inlineHelpText>Source: Moldev (Line of Business), SCIEX (None), IDBS (Strat Initiative), Leica (None) &amp; Beckman (Supplementary Details, Application Segments)</inlineHelpText>
        <label>Line of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <inlineHelpText>Source: Moldev (Market Segment), SCIEX (Market Vertical, Sub Vertical, MDS Assignment), IDBS (Market Segment, Market Vertical), Leica (Market Vertical, Market Vertical 2) &amp; Beckman (Global Application Detail)</inlineHelpText>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academia/Government Research</fullName>
                </value>
                <value>
                    <fullName>Academia/ Govt</fullName>
                </value>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>BasicMeasurement</fullName>
                </value>
                <value>
                    <fullName>Bioanalysis/PK</fullName>
                </value>
                <value>
                    <fullName>Bio Pharma</fullName>
                </value>
                <value>
                    <fullName>BioPharma &amp; Biotech</fullName>
                </value>
                <value>
                    <fullName>BioPharma Development</fullName>
                </value>
                <value>
                    <fullName>Biopharma - Development</fullName>
                </value>
                <value>
                    <fullName>Biopharma - Discovery</fullName>
                </value>
                <value>
                    <fullName>Biopharma - Process Control</fullName>
                </value>
                <value>
                    <fullName>Biopharma - QA/QC</fullName>
                </value>
                <value>
                    <fullName>BioPharma Research/ Discovery</fullName>
                </value>
                <value>
                    <fullName>BioProcess</fullName>
                </value>
                <value>
                    <fullName>BioResearch</fullName>
                </value>
                <value>
                    <fullName>Bio Tech</fullName>
                </value>
                <value>
                    <fullName>Cannabis</fullName>
                </value>
                <value>
                    <fullName>CDMO</fullName>
                </value>
                <value>
                    <fullName>Chemicals (Inorg., Organic., Petro.)</fullName>
                </value>
                <value>
                    <fullName>Clinical Research</fullName>
                </value>
                <value>
                    <fullName>Contract Research Organizations</fullName>
                </value>
                <value>
                    <fullName>Conventional Pharma</fullName>
                </value>
                <value>
                    <fullName>CRO</fullName>
                </value>
                <value>
                    <fullName>Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Dietary Supplements</fullName>
                </value>
                <value>
                    <fullName>Drug Discovery</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Vertical_2__c</fullName>
        <label>Market Vertical 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bio Pharma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpCoLastModifiedDate__c</fullName>
        <label>OpCo Last Modified Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpCo_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpCo Account</label>
        <referenceTo>OpCo_Account__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpCo_Cancellation_Lost_Data__c</fullName>
        <label>OpCo Won Lost Reason</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpCo_Competitor_Data__c</fullName>
        <label>OpCo Main Competitor</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpCo_Contact_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpCo Contact Data</label>
        <referenceTo>OpCo_Additional_Comment__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpCo_Line_Of_Business__c</fullName>
        <label>OpCo Line Of Business</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpCo_Market_Segment__c</fullName>
        <label>OpCo Market Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpCo_Product_Family__c</fullName>
        <label>OpCo Product Family</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpCo_Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpCo Related Contact</label>
        <referenceTo>OpCo_Related_Contact__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpCo_Stage__c</fullName>
        <label>OpCo Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpCo_Type__c</fullName>
        <label>OpCo Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpCo__c</fullName>
        <formula>if(OR(ISPICKVAL(Source__c,&quot;LSIG&quot;),TEXT(Source__c) =&quot;&quot;), TEXT(Destination__c) ,  TEXT(Source__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpCo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostgrID__c</fullName>
        <label>PostgrID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>OpCo Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <inlineHelpText>Source: Moldev (Product Family) SCIEX (Primary Application) IDBS (Primary Products) Leica (Primary Application, Secondary Application) &amp; Beckman (Product Type, Product Line, Additional Details, Product Groups, Product Moldes, Product Interest, Application Interest, Desired Product, Application)</inlineHelpText>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Data__c</fullName>
        <label>Region Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Data__c</fullName>
        <label>Source Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Link__c</fullName>
        <formula>IF(NOT(ISBLANK(Source_OpCo_Record_Id__c)),
IF(ISPICKVAL(Source__c, &apos;LSIG&apos;) &amp;&amp; ISPICKVAL(Destination__c, &apos;Leica&apos;), $Setup.BaseURL__c.Leica__c+Source_OpCo_Record_Id__c,
IF(ISPICKVAL(Source__c, &apos;LSIG&apos;) &amp;&amp; ISPICKVAL(Destination__c, &apos;IDBS&apos;),  $Setup.BaseURL__c.IDBS__c+Source_OpCo_Record_Id__c,
IF(ISPICKVAL(Source__c, &apos;LSIG&apos;) &amp;&amp; ISPICKVAL(Destination__c, &apos;Moldev&apos;),$Setup.BaseURL__c.Moldev__c+Source_OpCo_Record_Id__c,
IF(ISPICKVAL(Source__c, &apos;LSIG&apos;) &amp;&amp; ISPICKVAL(Destination__c, &apos;SCIEX&apos;),$Setup.BaseURL__c.SCIEX__c+Source_OpCo_Record_Id__c,
IF(ISPICKVAL(Source__c, &apos;LSIG&apos;) &amp;&amp; ISPICKVAL(Destination__c, &apos;Beckman&apos;),$Setup.BaseURL__c.Beckman__c+Source_OpCo_Record_Id__c,
IF(ISPICKVAL(Source__c, &apos;Leica&apos;),$Setup.BaseURL__c.Leica__c+Source_OpCo_Record_Id__c,
IF(ISPICKVAL(Source__c, &apos;IDBS&apos;),$Setup.BaseURL__c.IDBS__c+Source_OpCo_Record_Id__c,
IF(ISPICKVAL(Source__c, &apos;Moldev&apos;),$Setup.BaseURL__c.Moldev__c+Source_OpCo_Record_Id__c,
IF(ISPICKVAL(Source__c, &apos;SCIEX&apos;),$Setup.BaseURL__c.SCIEX__c+Source_OpCo_Record_Id__c,
IF(ISPICKVAL(Source__c, &apos;Beckman&apos;),$Setup.BaseURL__c.Beckman__c+Source_OpCo_Record_Id__c,
null)))))))))),null)</formula>
        <label>Source Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_OpCo_Owner__c</fullName>
        <label>Source OpCo Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_OpCo_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source OpCo Record Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source OpCo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beckman</fullName>
                </value>
                <value>
                    <fullName>IDBS</fullName>
                </value>
                <value>
                    <fullName>Leica</fullName>
                </value>
                <value>
                    <fullName>Moldev</fullName>
                </value>
                <value>
                    <fullName>SCIEX</fullName>
                </value>
                <value>
                    <fullName>LSIG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_Error__c</fullName>
        <label>Sync Error (If Applicable)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <label>Timeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Success__c</fullName>
        <formula>CASE(TEXT(Interface_Status__c) ,  
&quot;4-Intransit&quot;, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;),
&quot;5-Sent&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;),
&quot;7-Sync&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;),
&quot;6-Error&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;),&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfer Success</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Source__c</columns>
        <columns>OpCo_Account__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Bi_Di_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Source__c</columns>
        <columns>OpCo_Account__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>LSIG</value>
        </filters>
        <label>All Bi-Di Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_LSIG_IDBS_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Source__c</columns>
        <columns>OpCo_Account__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>IDBS</value>
        </filters>
        <label>All LSIG IDBS Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_LSIG_Leica_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OpCo_Account__c</columns>
        <columns>Destination__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Destination__c</field>
            <operation>equals</operation>
            <value>Leica</value>
        </filters>
        <label>All LSIG Leica Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_LSIG_Moldev_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Source__c</columns>
        <columns>OpCo_Account__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Moldev</value>
        </filters>
        <label>All LSIG Moldev Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_LSIG_SCIEX_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Source__c</columns>
        <columns>OpCo_Account__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>SCIEX</value>
        </filters>
        <label>All LSIG SCIEX Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Beckman_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Source__c</columns>
        <columns>OpCo_Account__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Beckman</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>uat</value>
        </filters>
        <label>All LSIG Beckman Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>FD_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>LSIG_Contact__c</columns>
        <columns>Destination__c</columns>
        <columns>OpCo_Account__c</columns>
        <columns>OpCo_Related_Contact__c</columns>
        <columns>Interface_Status__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Source_OpCo_Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>diey</value>
        </filters>
        <label>FD Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Beckman</fullName>
        <active>true</active>
        <businessProcess>LSIG to OpCos Oppty</businessProcess>
        <description>Beckman Opportunities (Source &amp; LSIG)</description>
        <label>Beckman</label>
    </recordTypes>
    <recordTypes>
        <fullName>IDBS</fullName>
        <active>true</active>
        <businessProcess>LSIG to OpCos Oppty</businessProcess>
        <description>IDBS Opportunities (Source &amp; LSIG)</description>
        <label>IDBS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leica</fullName>
        <active>true</active>
        <businessProcess>LSIG to OpCos Oppty</businessProcess>
        <description>Leica Opportunities (Source &amp; LSIG)</description>
        <label>Leica</label>
    </recordTypes>
    <recordTypes>
        <fullName>Moldev</fullName>
        <active>true</active>
        <businessProcess>LSIG to OpCos Oppty</businessProcess>
        <description>Moldev Opportunities (Source &amp; LSIG)</description>
        <label>Moldev</label>
    </recordTypes>
    <recordTypes>
        <fullName>SCIEX</fullName>
        <active>true</active>
        <businessProcess>LSIG to OpCos Oppty</businessProcess>
        <description>SCIEX Opportunities (Source &amp; LSIG)</description>
        <label>SCIEX</label>
    </recordTypes>
</CustomObject>